--- a/.gitignore
+++ b/.gitignore
@@ -3,12 +3,12 @@
 # Get latest from https://github.com/github/gitignore/blob/main/Unity.gitignore
 #
 /Hearthflame/Library/
-/[Tt]emp/
-/[Oo]bj/
-/[Bb]uild/
-/[Bb]uilds/
-/[Ll]ogs/
-/[Uu]ser[Ss]ettings/
+/Hearthflame/Temp/
+/Hearthflame/Oo]bj/
+/Hearthflame/Build/
+/Hearthflame//Builds/
+/Hearthflame//Logs/
+/Hearthflame/Usersettings/
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
