--- a/Hearthflame/Packages/manifest.json
+++ b/Hearthflame/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.github.siccity.xnode": "https://github.com/Siccity/xNode.git",
     "com.unity.2d.animation": "5.0.10",
     "com.unity.2d.ik": "3.0.2-preview.3",
     "com.unity.2d.sprite": "1.0.0",
